--- a/wdk/wdk.gradle
+++ b/wdk/wdk.gradle
@@ -58,7 +58,7 @@ Task CreateJsCompileTask(String name, List<String> srcDirsFiles, String outName,
     task.args "-O", optLevel
     task.args "--language_in", "ECMASCRIPT6_STRICT"
     task.args "--js_output_file", "$buildDir/$outName"
-    task.args "--manage_closure_dependencies"
+    task.args "--dependency_mode", "LOOSE"
 
     def jsSources = []
     srcDirsFiles.each {
