--- a/wdk/wdk.gradle
+++ b/wdk/wdk.gradle
@@ -53,7 +53,14 @@ Task CreateJsCompileTask(String name, List<String> srcDirsFiles, String outName,
     Task task = tasks.create(name: "$name-phase1", type: Exec)
     task.dependsOn(MakeOutputDir)
 
-    task.executable "java"
+    def javaExe
+    if (System.env.JAVA_HOME) {
+        javaExe = "${System.env.JAVA_HOME}/bin/java"
+    } else {
+        javaExe = "java"
+    }
+
+    task.executable javaExe
     task.args "-jar", "$WDK_ROOT/tools/closure-compiler.jar"
     task.args "-O", optLevel
     task.args "--language_in", "ECMASCRIPT6_STRICT"
