--- a/btree/build.gradle
+++ b/btree/build.gradle
@@ -5,6 +5,6 @@
  */
 
 dependencies {
-    compile project(":adk")
-    compile project(":async")
+    implementation project(":adk")
+    implementation project(":async")
 }
