--- a/json/adk_codecs/build.gradle
+++ b/json/adk_codecs/build.gradle
@@ -5,6 +5,6 @@
  */
 
 dependencies {
-    compile project(":adk")
-    compile project(":json")
+    implementation project(":adk")
+    implementation project(":json")
 }
