Fix missing dependencies in gradle files.

--- a/config/build.gradle
+++ b/config/build.gradle
@@ -5,6 +5,7 @@
  */
 
 dependencies {
+    implementation project(":omm")
     implementation project(":json")
     implementation project(":json:adk_codecs")
 }
