--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     implementation project(":async")
     implementation project(":json")
     implementation project(":log")
+    implementation project(":omm")
 }
