Html module added (moved from MM project).

--- a/html/build.gradle
+++ b/html/build.gradle
@@ -5,7 +5,6 @@
  */
 
 dependencies {
+    implementation project(":adk")
     implementation project(":omm")
-    implementation project(":json")
-    implementation project(":json:json_adk_codecs")
 }
