--- a/wdk/example/package.json
+++ b/wdk/example/package.json
@@ -9,7 +9,8 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.30",
         "@fortawesome/free-regular-svg-icons": "^5.14.0",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
-        "@fortawesome/vue-fontawesome": "^2.0.0"
+        "@fortawesome/vue-fontawesome": "^2.0.0",
+        "vue-router": "^3.4.3"
     },
     "scripts": {
         "serve": "vue-cli-service serve --port 9001 --https",
