--- a/wdk/example/package.json
+++ b/wdk/example/package.json
@@ -10,7 +10,8 @@
         "@fortawesome/free-regular-svg-icons": "^5.14.0",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/vue-fontawesome": "^2.0.0",
-        "vue-router": "^3.4.3"
+        "vue-router": "^3.4.3",
+        "vuex": "^3.5.1"
     },
     "scripts": {
         "serve": "vue-cli-service serve --port 9001 --https",
