--- a/wdk/example/package.json
+++ b/wdk/example/package.json
@@ -6,7 +6,8 @@
         "vue-router": "^3.4.3",
         "vuex": "^3.5.1",
         "quasar": "^1.13.2",
-        "@quasar/extras": "^1.9.5"
+        "@quasar/extras": "^1.9.5",
+        "wdk": ".."
     },
     "scripts": {
         "serve": "vue-cli-service serve --port 9001 --https",
