--- a/wdk/example/package.json
+++ b/wdk/example/package.json
@@ -14,7 +14,8 @@
         "build": "vue-cli-service build --modern"
     },
     "devDependencies": {
-        "@vue/cli-service": "^4.5.4",
+        "@vue/cli-service": "^4.5.8",
+        "@vue/cli-plugin-babel": "^4.5.8",
         "vue-template-compiler": "^2.6.12",
         "less-loader": "^7.0.1",
         "less": "^3.12.2"
